Modificando Footer con BS

--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ margin-left: 10px;
   }
   
   footer{
-    background-color:#f55e07;
+    background-color:#f55302;
     color: black;
     padding-top: 1rem;
     width: 100%;
@@ -456,7 +456,7 @@ margin-left: 10px;
 
   .display-2 {
     text-transform: capitalize;
-    color: #f55e07;
+    color: #f55302;
   }
 
   .display-2-description {
