--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,74 @@
   box-sizing: border-box;
 }
 
+header {
+  background-color: #f55302;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+header .nav {
+  width: 100%;
+  visibility: hidden;
+  height: 0;
+  position: absolute;
+  font-size: 1rem;
+  right: 0;
+}
+header .nav .nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+header .nav .nav__list--primary {
+  margin-bottom: 2rem;
+}
+header .nav .nav__item {
+  margin-top: 0.75rem;
+}
+header .nav .nav__link {
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+header .nav--visible {
+  visibility: visible;
+  height: auto;
+  position: relative;
+}
+header .nav-toggle {
+  cursor: pointer;
+  border: none;
+  font-size: 30px;
+  width: 3rem;
+  height: 3rem;
+  padding: 0em;
+  border-radius: 0.25rem;
+  background: none;
+  color: white;
+  transition: opacity 250ms ease;
+  position: absolute;
+  right: 0;
+  margin-right: 40px;
+}
+header.hamburger:hover {
+  opacity: 0.75;
+  display: block;
+  margin: 0 auto;
+  height: 3px;
+  background: white;
+  width: 100%;
+  transform: translateY(-6px);
+  transform: translateY(3px);
+}
+header .hamburger {
+  width: 50%;
+  position: relative;
+}
+
 footer {
   background-color: #f55302;
   color: black;
