--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,8 @@
 @import "global";
 @import "header";
+@import "index";
+@import "productos";
+@import "nuestra-fabrica";
+@import "ubicacion";
+@import "contacto";
 @import "footer";
