--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,83 @@
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 100vh;
+}
+body img {
+  max-width: 100%;
+}
+body img,
+body svg {
+  vertical-align: middle;
+}
+body .logo img {
+  width: 80px;
+  margin-left: 10px;
+}
+body .container {
+  width: 95%;
+  margin: 0 auto;
+  max-width: 1320px;
+}
+@media (min-width: 768px) {
+  body .form {
+    padding: 0 4rem;
+  }
+  body .container {
+    min-width: 80%;
+  }
+  body .nav-toggle {
+    display: none;
+  }
+  body .nav {
+    visibility: visible;
+    display: flex;
+    align-items: center;
+    height: auto;
+    position: relative;
+  }
+  body .nav__list {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+  }
+  body .nav__items {
+    margin: 0 0 0 1.5rem;
+  }
+  body .row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  body .img-box {
+    margin-top: 0;
+    text-align: center;
+  }
+  body .display-2 {
+    text-transform: capitalize;
+    color: #f55302;
+  }
+  body .display-2 .description {
+    color: #ffffff;
+    font-size: 1.4rem;
+    font-weight: 400;
+    display: inline-block;
+    margin-top: 2rem;
+  }
+}
+@media (min-width: 1024px) {
+  body .display-2 {
+    font-size: 4.5rem;
+  }
+  body .display-2-description {
+    font-size: 1.4rem;
+    display: inline-block;
+  }
+}
+
 header {
   background-color: #f55302;
   position: sticky;
@@ -66,10 +143,215 @@ header.hamburger:hover {
   width: 100%;
   transform: translateY(-6px);
   transform: translateY(3px);
+  opacity: 0.65;
 }
 header .hamburger {
   width: 50%;
   position: relative;
+}
+header .logo {
+  margin-right: 1rem;
+}
+header .button {
+  display: none;
+  position: relative;
+  background: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 0.93rem 3.3rem 0.93rem 1.2rem;
+  font-weight: 700;
+  border: 0.1rem solid white;
+  border-radius: 50rem;
+  cursor: pointer;
+  z-index: 1;
+  overflow: hidden;
+  transition: all 0.5s;
+}
+header .button span {
+  position: absolute;
+  background-color: #55ae36;
+  width: 2.5rem;
+  height: 2.5rem;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+}
+header .i {
+  color: white;
+  font-size: 1rem;
+  line-height: 2.5rem;
+}
+headerbutton:hover {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 190%;
+}
+header .button:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0;
+  width: 100%;
+  background: linear-gradient(to right, #55ae36, #88e169);
+  z-index: -1;
+  border-radius: 0 0 50% 50%;
+  transition: all 0.5s;
+}
+header .li {
+  list-style-type: none;
+  font-size: 2rems;
+  display: inline;
+  padding: 10px;
+  margin: 5px;
+}
+header .link {
+  text-decoration: none;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.inicio {
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(89, 90, 95, 0.8), rgba(83, 86, 95, 0.8)), url(../assets/imagenes/img-22.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.inicio h1 {
+  color: #f55e07;
+  font-size: 5rem;
+}
+.inicio a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+img,
+svg {
+  vertical-align: middle;
+}
+
+.logo img {
+  width: 80px;
+  margin-left: 10px;
+}
+
+.container {
+  width: 95%;
+  margin: 0 auto;
+  max-width: 1320px;
+}
+
+.productos {
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(89, 90, 95, 0.8), rgba(83, 86, 95, 0.8)), url(../assets/imagenes/img1.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.productosbutton:hover:focus {
+  background: rgb(250, 173, 28);
+  transition-duration: 1s;
+  outline: 0;
+}
+.productos .grid__container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  margin: 20px 0px;
+}
+.productos .item {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(252, 173, 28);
+  border-radius: 1rem;
+  padding: 2rem;
+  margin-bottom: 30px;
+}
+.productos .item img {
+  order: -1;
+  align-self: center;
+}
+.productos .item button {
+  margin-top: auto;
+  background: black;
+  color: white;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 1rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.servicios {
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img-revuelo-1.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.ubicacion {
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img-revuelo-4.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.flex-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.form {
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img2.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.form .contac-form {
+  max-width: 1170px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.5em;
+  background-image: linear-gradient(rgba(51, 47, 43, 0.5), rgba(51, 45, 40, 0.5));
+}
+.form .contac-form form button,
+.form .contac-form form input,
+.form .contac-form form textarea {
+  width: 100%;
+  padding: 0.7em;
+  border: none;
+  background: none;
+  border-bottom: 1px solid rgb(255, 123, 0);
+  outline: none;
+  color: #ffffff;
+}
+.form .button {
+  background: rgb(255, 123, 0);
+  border: 0;
+  padding: 1em;
+}
+.form .contac-form form button:hover,
+.form .contac-form form button:focus {
+  background: rgb(250, 173, 28);
+  transition-duration: 1s;
+  outline: 0;
 }
 
 footer {
