--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -64,10 +64,81 @@ header {
     width: 100%;
     transform: translateY(-6px);
     transform: translateY(3px);
+    opacity: 0.65;
   }
 
   .hamburger {
     width: 50%;
     position: relative;
+  }
+
+  .logo {
+    margin-right: 1rem;
+  }
+
+  .button {
+    display: none;
+    position: relative;
+    background: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 0.93rem 3.3rem 0.93rem 1.2rem;
+    font-weight: 700;
+    border: 0.1rem solid white;
+    border-radius: 50rem;
+    cursor: pointer;
+    z-index: 1;
+    overflow: hidden;
+    transition: all 0.5s;
+  }
+
+  .button span {
+    position: absolute;
+    background-color: #55ae36;
+    width: 2.5rem;
+    height: 2.5rem;
+    top: 50%;
+    right: 5px;
+    transform: translateY(-50%);
+    border-radius: 50%;
+  }
+
+  .i {
+    color: white;
+    font-size: 1rem;
+    line-height: 2.5rem;
+  }
+
+  &button:hover {
+    color: white;
+    background-color: rgba(#000, 0.6);
+    height: 190%;
+  }
+
+  .button:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 0;
+    width: 100%;
+    background: linear-gradient(to right, #55ae36, #88e169);
+    z-index: -1;
+    border-radius: 0 0 50% 50%;
+    transition: all 0.5s;
+  }
+
+  .li {
+    list-style-type: none;
+    font-size: 2rems;
+    display: inline;
+    padding: 10px;
+    margin: 5px;
+  }
+
+  .link {
+    text-decoration: none;
+    color: #ffffff;
+    text-transform: uppercase;
   }
 }
