--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ header .i {
   font-size: 1rem;
   line-height: 2.5rem;
 }
-headerbutton:hover {
+header button:hover {
   color: white;
   background-color: rgba(0, 0, 0, 0.6);
   height: 190%;
@@ -214,7 +214,11 @@ header .link {
 
 .inicio {
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.8), rgba(83, 86, 95, 0.8)), url(../assets/imagenes/img-22.jpg);
+  background-image: linear-gradient(
+      rgba(89, 90, 95, 0.8),
+      rgba(83, 86, 95, 0.8)
+    ),
+    url(../assets/imagenes/img-22.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
@@ -250,7 +254,11 @@ svg {
 
 .productos {
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.8), rgba(83, 86, 95, 0.8)), url(../assets/imagenes/img1.jpg);
+  background-image: linear-gradient(
+      rgba(89, 90, 95, 0.8),
+      rgba(83, 86, 95, 0.8)
+    ),
+    url(../assets/imagenes/img1.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
@@ -292,7 +300,11 @@ svg {
 
 .servicios {
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img-revuelo-1.jpg);
+  background-image: linear-gradient(
+      rgba(89, 90, 95, 0.75),
+      rgba(83, 86, 95, 0.75)
+    ),
+    url(../assets/imagenes/img-revuelo-1.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
@@ -301,7 +313,11 @@ svg {
 
 .ubicacion {
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img-revuelo-4.jpg);
+  background-image: linear-gradient(
+      rgba(89, 90, 95, 0.75),
+      rgba(83, 86, 95, 0.75)
+    ),
+    url(../assets/imagenes/img-revuelo-4.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
@@ -317,7 +333,11 @@ svg {
 
 .form {
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img2.jpg);
+  background-image: linear-gradient(
+      rgba(89, 90, 95, 0.75),
+      rgba(83, 86, 95, 0.75)
+    ),
+    url(../assets/imagenes/img2.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
@@ -329,7 +349,10 @@ svg {
   margin-left: auto;
   margin-right: auto;
   padding: 1.5em;
-  background-image: linear-gradient(rgba(51, 47, 43, 0.5), rgba(51, 45, 40, 0.5));
+  background-image: linear-gradient(
+    rgba(51, 47, 43, 0.5),
+    rgba(51, 45, 40, 0.5)
+  );
 }
 .form .contac-form form button,
 .form .contac-form form input,
