--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,14 +3,18 @@ header {
   position: sticky;
   top: 0;
   z-index: 2;
-  .nav {
-    width: 100%;
+  width: 100%;
+
+  .navbar {
     visibility: hidden;
     height: 0;
     position: absolute;
     font-size: 1rem;
-    right: 0;
-    .nav__list {
+   
+
+    }
+
+  .nav__list {
       margin: 0;
       padding: 0;
       list-style: none;
@@ -34,6 +38,7 @@ header {
     }
   }
   .nav--visible {
+   
     visibility: visible;
     height: auto;
     position: relative;
