--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,40 +5,37 @@ header {
   z-index: 2;
   width: 100%;
 
-  .navbar {
+  .nav {
     visibility: hidden;
     height: 0;
     position: absolute;
     font-size: 1rem;
-   
-
-    }
+  }
 
   .nav__list {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-    }
-
-    .nav__list--primary {
-      margin-bottom: 2rem;
-    }
-
-    .nav__item {
-      margin-top: 0.75rem;
-    }
-
-    .nav__link {
-      color: white;
-      text-transform: uppercase;
-      text-decoration: none;
-    }
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
   }
+
+  .nav__list--primary {
+    margin-bottom: 2rem;
+  }
+
+  .nav__item {
+    margin-top: 0.75rem;
+  }
+
+  .nav__link {
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+
   .nav--visible {
-   
     visibility: visible;
     height: auto;
     position: relative;
@@ -60,21 +57,27 @@ header {
     margin-right: 40px;
   }
 
-  &.hamburger:hover {
-    opacity: 0.75;
-    display: block;
-    margin: 0 auto;
-    height: 3px;
-    background: white;
-    width: 100%;
-    transform: translateY(-6px);
-    transform: translateY(3px);
-    opacity: 0.65;
-  }
-
   .hamburger {
     width: 50%;
     position: relative;
+
+    &.hamburger:hover {
+      opacity: 0.75;
+      display: block;
+      margin: 0 auto;
+      height: 3px;
+      background: white;
+      width: 100%;
+      transform: translateY(-6px);
+      transform: translateY(3px);
+      opacity: 0.65;
+    }
+
+    &button:hover {
+      color: white;
+      background-color: rgba(#000, 0.6);
+      height: 190%;
+    }
   }
 
   .logo {
@@ -99,7 +102,6 @@ header {
 
   .button span {
     position: absolute;
-    background-color: #55ae36;
     width: 2.5rem;
     height: 2.5rem;
     top: 50%;
@@ -112,25 +114,6 @@ header {
     color: white;
     font-size: 1rem;
     line-height: 2.5rem;
-  }
-
-  &button:hover {
-    color: white;
-    background-color: rgba(#000, 0.6);
-    height: 190%;
-  }
-
-  .button:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 0;
-    width: 100%;
-    background: linear-gradient(to right, #55ae36, #88e169);
-    z-index: -1;
-    border-radius: 0 0 50% 50%;
-    transition: all 0.5s;
   }
 
   .li {
