--- a/scss/_ubicacion.scss
+++ b/scss/_ubicacion.scss
@@ -9,4 +9,19 @@
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+
+  .map-responsive {
+    overflow: hidden;
+    padding-bottom: 60%;
+    position: relative;
+    height: 0%;
+  }
+
+  .map-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
 }
