--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -36,13 +36,13 @@
     padding: 0.7em;
     border: none;
     background: none;
-    border-bottom: 1px solid rgb(255, 123, 0);
+    border-bottom: 1px solid $color-primario;
     outline: none;
     color: #ffffff;
   }
 
   .button {
-    background: rgba(255, 123, 0);
+    background: $color-primario;
     border: 0;
     padding: 1em;
   }
