--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -13,22 +13,6 @@ body {
     max-width: 100%;
   }
 
-  img,
-  svg {
-    vertical-align: middle;
-  }
-
-  .logo img {
-    width: 80px;
-    margin-left: 10px;
-  }
-
-  .container {
-    width: 95%;
-    margin: 0 auto;
-    max-width: 1320px;
-  }
-
   @media (min-width: 768px) {
     .form {
       padding: 0 4rem;
@@ -73,7 +57,7 @@ body {
 
     .display-2 {
       text-transform: capitalize;
-      color: #f55302;
+      color: $color-primario;
       .description {
         color: #ffffff;
         font-size: 1.4rem;
