--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,132 +1,23 @@
 header {
-  background-color: #f55302;
+  background-color: $color-primario;
   position: sticky;
   top: 0;
   z-index: 2;
   width: 100%;
 
-  .nav {
-    visibility: hidden;
-    height: 0;
-    position: absolute;
-    font-size: 1rem;
-  }
-
-  .nav__list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .nav__list--primary {
-    margin-bottom: 2rem;
-  }
-
-  .nav__item {
-    margin-top: 0.75rem;
-  }
-
-  .nav__link {
-    color: white;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-
-  .nav--visible {
-    visibility: visible;
-    height: auto;
-    position: relative;
-  }
-
-  .nav-toggle {
-    cursor: pointer;
-    border: none;
-    font-size: 30px;
-    width: 3rem;
-    height: 3rem;
-    padding: 0em;
-    border-radius: 0.25rem;
-    background: none;
-    color: white;
-    transition: opacity 250ms ease;
-    position: absolute;
-    right: 0;
-    margin-right: 40px;
-  }
-
-  .hamburger {
-    width: 50%;
-    position: relative;
-
-    &.hamburger:hover {
-      opacity: 0.75;
-      display: block;
-      margin: 0 auto;
-      height: 3px;
-      background: white;
-      width: 100%;
-      transform: translateY(-6px);
-      transform: translateY(3px);
-      opacity: 0.65;
-    }
-
-    &button:hover {
-      color: white;
-      background-color: rgba(#000, 0.6);
-      height: 190%;
-    }
-  }
-
   .logo {
     margin-right: 1rem;
-  }
 
-  .button {
-    display: none;
-    position: relative;
-    background: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    padding: 0.93rem 3.3rem 0.93rem 1.2rem;
-    font-weight: 700;
-    border: 0.1rem solid white;
-    border-radius: 50rem;
-    cursor: pointer;
-    z-index: 1;
-    overflow: hidden;
-    transition: all 0.5s;
-  }
+    img {
+      width: 80px;
+      margin-left: 10px;
+    }
 
-  .button span {
-    position: absolute;
-    width: 2.5rem;
-    height: 2.5rem;
-    top: 50%;
-    right: 5px;
-    transform: translateY(-50%);
-    border-radius: 50%;
-  }
-
-  .i {
-    color: white;
-    font-size: 1rem;
-    line-height: 2.5rem;
-  }
-
-  .li {
-    list-style-type: none;
-    font-size: 2rems;
-    display: inline;
-    padding: 10px;
-    margin: 5px;
-  }
-
-  .link {
-    text-decoration: none;
-    color: #ffffff;
-    text-transform: uppercase;
+    .nav {
+      visibility: hidden;
+      height: 0;
+      position: absolute;
+      font-size: 1rem;
+    }
   }
 }
