--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -11,31 +11,11 @@
   background-size: cover;
 
   h1 {
-    color: #f55e07;
+    color: $color-primario;
     font-size: 5rem;
   }
 
   a {
     text-decoration: none;
   }
-}
-
-img {
-  max-width: 100%;
-}
-
-img,
-svg {
-  vertical-align: middle;
-}
-
-.logo img {
-  width: 80px;
-  margin-left: 10px;
-}
-
-.container {
-  width: 95%;
-  margin: 0 auto;
-  max-width: 1320px;
 }
