--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -17,7 +17,8 @@ header {
       visibility: hidden;
       height: 0;
       position: absolute;
-      font-size: 1rem;
+      font-size: 1.2rem;
+      right: 0;
     }
   }
 }
