--- a/css/style.css
+++ b/css/style.css
@@ -5,70 +5,43 @@
 }
 
 body {
-  font-family: "Rock Salt", cursive;
+  font-family: "Lato", sans-serif;
   display: flex;
   flex-wrap: wrap;
   min-height: 100vh;
 }
-body img {
-  max-width: 100%;
-}
+
 @media (min-width: 768px) {
-  body .form {
+  .form {
     padding: 0 4rem;
   }
-  body .container {
+  .container {
     min-width: 80%;
   }
-  body .nav-toggle {
+  .nav-toggle {
     display: none;
   }
-  body .nav {
+  .nav {
     visibility: visible;
     display: flex;
     align-items: center;
     height: auto;
     position: relative;
   }
-  body .nav__list {
+  .nav__list {
     display: flex;
     flex-direction: row;
     margin: 0;
   }
-  body .nav__items {
+  .nav__items {
     margin: 0 0 0 1.5rem;
   }
-  body .row {
+  .row {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  body .img-box {
-    margin-top: 0;
-    text-align: center;
-  }
-  body .display-2 {
-    text-transform: capitalize;
-    color: #f55302;
-  }
-  body .display-2 .description {
-    color: #ffffff;
-    font-size: 1.4rem;
-    font-weight: 400;
-    display: inline-block;
-    margin-top: 2rem;
-  }
 }
-@media (min-width: 1024px) {
-  body .display-2 {
-    font-size: 4.5rem;
-  }
-  body .display-2-description {
-    font-size: 1.4rem;
-    display: inline-block;
-  }
-}
-
 header {
   background-color: #f55302;
   position: sticky;
@@ -92,17 +65,22 @@ header .logo .nav {
 }
 
 .inicio {
-  width: 100%;
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.8), rgba(83, 86, 95, 0.8)), url(../assets/imagenes/img-22.jpg);
+  background-image: linear-gradient(rgba(89, 90, 95, 0.8), rgba(83, 86, 95, 0.8)), url(../assets/imagenes/img-22.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  width: 100%;
 }
-.inicio h1 {
+.inicio .title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.inicio .title h1 {
   color: #f55302;
-  font-size: 5rem;
+  font-size: 3.5rem;
 }
 .inicio h2 {
   font-size: 2rem;
@@ -115,35 +93,56 @@ header .logo .nav {
 .inicio a {
   text-decoration: none;
 }
+.inicio img {
+  width: 100%;
+}
 
 .productos {
-  width: 100%;
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.8), rgba(83, 86, 95, 0.8)), url(../assets/imagenes/img1.jpg);
+  background-image: linear-gradient(rgba(89, 90, 95, 0.8), rgba(83, 86, 95, 0.8)), url(../assets/imagenes/img1.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  width: 100%;
+}
+.productos .card {
+  border-color: #f55302;
+  height: 100%;
+}
+.productos .card img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
 }
 
 .fabrica {
-  width: 100%;
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img-revuelo-1.jpg);
+  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img-11.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  width: 100%;
+}
+.fabrica .card {
+  border-color: #f55302;
+  height: 100%;
+}
+.fabrica .card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .ubicacion {
-  width: 100%;
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img-revuelo-4.jpg);
+  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img4.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  width: 100%;
 }
 .ubicacion .map-responsive {
   overflow: hidden;
@@ -167,16 +166,16 @@ header .logo .nav {
 }
 
 .form {
-  width: 100%;
   min-height: 100vh;
-  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img2.jpg);
+  background-image: linear-gradient(rgba(89, 90, 95, 0.75), rgba(83, 86, 95, 0.75)), url(../assets/imagenes/img2.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  width: 100%;
 }
 .form .contac-form {
-  max-width: 1170px;
+  max-width: 1320px;
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
