--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,13 +1,24 @@
 .productos {
-  width: 100%;
   min-height: 100vh;
   background-image: linear-gradient(
       rgba(89, 90, 95, 0.8),
       rgba(83, 86, 95, 0.8)
     ),
-    url(../assets/imagenes/img1.jpg);
+    url(../assets/imagenes/img1.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  width: 100%;
+
+  .card {
+    border-color: $color-primario;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 50%;
+      object-fit: cover;
+    }
+  }
 }
